--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Patrick</title>
+    <meta name="description"
+		content="Crystal Shipment is more than logistics. We optimize your packaging, manage your materials sourcing, and so much more..">
+	<meta name="keywords" content="Logistic,Crystal Shipment, Cargo,Delivery">
+    <meta name="author" content="Patrick Chimezie Chukwudifu">
+    <title>Crystal Shipment</title>
   </head>
   <body>
     <div id="root"></div>
